[tool.poetry]
name = "action_qualia_api"
version = "0.1.0"
description = ""
authors = ["wwwshwww <www.shinderu.www@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
numpy-quaternion = "^2021.4.5"
roslibpy = "^1.2.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
